# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")

config("ans_distributed_config") {
  include_dirs = [
    "${services_path}/distributed/include",
    "${ffrt_path}/interfaces/kits",
  ]
}

ohos_shared_library("libans_distributed") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "src/distributed_database.cpp",
    "src/distributed_database_callback.cpp",
    "src/distributed_device_callback.cpp",
    "src/distributed_flow_control.cpp",
    "src/distributed_notification_manager.cpp",
    "src/distributed_preferences.cpp",
    "src/distributed_preferences_database.cpp",
    "src/distributed_preferences_info.cpp",
    "src/distributed_screen_status_manager.cpp",
  ]

  include_dirs = [ "include" ]

  defines = []

  configs = [
    ":ans_distributed_config",
    "${frameworks_module_ans_path}:ans_innerkits_public_config",
  ]

  deps = [ "${frameworks_module_ans_path}:ans_innerkits" ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "kv_store:distributeddata_inner",
  ]

  if (ans_hitrace_usage) {
    external_deps += [ "hitrace:hitrace_meter" ]
    defines += [ "HITRACE_METER_ENABLE" ]
  }

  subsystem_name = "${subsystem_name}"
  part_name = "${component_name}"
}
