# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")

config("ans_base_config") {
  include_dirs = [
    "${services_path}/infrastructure/external_adapter/account/include",
    "${services_path}/infrastructure/external_adapter/bms/include",
    "${services_path}/infrastructure/external_adapter/extension/include",
    "${services_path}/infrastructure/external_adapter/ffrt/include",
    "${services_path}/infrastructure/interfaces",
    "${services_path}/infrastructure/interfaces/adapter",
  ]
}

ohos_shared_library("ans_base") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "external_adapter/account/iaccount_manager_impl.cpp",
    "external_adapter/extension/src/all_scenarios_extension_wrapper.cpp",
    "external_adapter/bms/src/bundle_manager_repository_impl.cpp",
    "external_adapter/bms/src/bundle_service_connector.cpp",
    "external_adapter/ffrt/src/ffrt_queue_impl.cpp",
  ]

  defines = []

  if (distributed_notification_service_feature_notification_multi_foreground_user) {
    defines += [ "NOTIFICATION_MULTI_FOREGROUND_USER" ]
  }

  configs = [
    ":ans_base_config",
    "${frameworks_module_ans_path}:ans_innerkits_public_config",
  ]

  deps = [ "${frameworks_module_ans_path}:ans_innerkits" ]

  external_deps = [
    "ability_base:configuration",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "${subsystem_name}"
  part_name = "${component_name}"
}
