# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "addnotificationslot_fuzzer:AddNotificationSlotFuzzTest",
    "addnotificationslots_fuzzer:AddNotificationSlotsFuzzTest",
    "addslotbytype_fuzzer:AddSlotByTypeFuzzTest",
    "cancelasbundle_fuzzer:CancelAsBundleFuzzTest",
    "cancelgroup_fuzzer:CancelGroupFuzzTest",
    "cancelnotification_fuzzer:CancelNotificationFuzzTest",
    "enabledistributed_fuzzer:EnableDistributedFuzzTest",
    "getactivenotificationnums_fuzzer:GetActiveNotificationNumsFuzzTest",
    "getallactivenotifications_fuzzer:GetAllActiveNotificationsFuzzTest",
    "getbundleimportance_fuzzer:GetBundleImportanceFuzzTest",
    "getnotificationslot_fuzzer:GetNotificationSlotFuzzTest",
    "getnotificationslotnumasbundle_fuzzer:GetNotificationSlotNumAsBundleFuzzTest",
    "getnotificationslotsforbundle_fuzzer:GetNotificationSlotsForBundleFuzzTest",
    "notification_fuzzer:NotificationFuzzTest",
    "notificationconversationalcontent_fuzzer:NotificationConversationalContentFuzzTest",
    "notificationconversationalmessage_fuzzer:NotificationConversationalMessageFuzzTest",
    "notificationdonotdisturbdate_fuzzer:NotificationDoNotDisturbDateFuzzTest",
    "notificationlongtextcontent_fuzzer:NotificationLongTextContentFuzzTest",
    "notificationmultilinecontent_fuzzer:NotificationMultiLineContentFuzzTest",
    "notificationpicturecontent_fuzzer:NotificationPictureContentFuzzTest",
    "notificationrequest_fuzzer:NotificationRequestFuzzTest",
    "notificationsorting_fuzzer:NotificationSortingFuzzTest",
    "notificationsortingmap_fuzzer:NotificationSortingMapFuzzTest",
    "notificationsubscribeInfo_fuzzer:NotificationSubscribeInfoFuzzTest",
    "notificationtemplate_fuzzer:NotificationTemplateFuzzTest",
    "publishcontinuoustasknotification_fuzzer:PublishContinuousTaskNotificationFuzzTest",
    "publishnotification_fuzzer:PublishNotificationFuzzTest",
    "readfromparcel_fuzzer:ReadFromParcelFuzzTest",
    "reminderrequest_fuzzer:ReminderRequestFuzzTest",
    "reminderrequestannex_fuzzer:ReminderRequestAnnexFuzzTest",
    "reminderrequestcontinuate_fuzzer:ReminderRequestContinuateFuzzTest",
    "removenotification_fuzzer:RemoveNotificationFuzzTest",
    "removenotificationsbybundle_fuzzer:RemoveNotificationsByBundleFuzzTest",
    "removenotificationslot_fuzzer:RemoveNotificationSlotFuzzTest",
    "setdonotdisturbdate_fuzzer:SetDoNotDisturbDateFuzzTest",
    "setnotificationbadgenum_fuzzer:SetNotificationBadgeNumFuzzTest",
    "setnotificationsenabledforallbundles_fuzzer:SetNotificationsEnabledForAllBundlesFuzzTest",
    "setprogressbar_fuzzer:SetProgressBarFuzzTest",
    "settemplate_fuzzer:SetTemplateFuzzTest",
  ]
}
