# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/notification/distributed_notification_service/notification.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "addnotificationslot_fuzzer:AddNotificationSlotFuzzTest",
    "addnotificationslots_fuzzer:AddNotificationSlotsFuzzTest",
    "addslotbytype_fuzzer:AddSlotByTypeFuzzTest",
    "advancednotificationservice:fuzztest",
    "advancednotificationservice_fuzzer:AdvancedNotificationServiceFuzzTest",
    "ansmanagerstub_fuzzer:AnsManagerStubFuzzTest",
    "ansmanagerstubannex_fuzzer:AnsManagerStubAnnexFuzzTest",
    "ansmanagerstubannexthree_fuzzer:AnsManagerStubAnnexThreeFuzzTest",
    "ansmanagerstubannextwo_fuzzer:AnsManagerStubAnnexTwoFuzzTest",
    "cancelasbundle_fuzzer:CancelAsBundleFuzzTest",
    "cancelgroup_fuzzer:CancelGroupFuzzTest",
    "cancelnotification_fuzzer:CancelNotificationFuzzTest",
    "enabledistributed_fuzzer:EnableDistributedFuzzTest",
    "enablednotificationcallbackdata_fuzzer:EnabledNotificationCallbackDataFuzzTest",
    "getactivenotificationnums_fuzzer:GetActiveNotificationNumsFuzzTest",
    "getallactivenotifications_fuzzer:GetAllActiveNotificationsFuzzTest",
    "getbundleimportance_fuzzer:GetBundleImportanceFuzzTest",
    "getnotificationslot_fuzzer:GetNotificationSlotFuzzTest",
    "getnotificationslotnumasbundle_fuzzer:GetNotificationSlotNumAsBundleFuzzTest",
    "getnotificationslotsforbundle_fuzzer:GetNotificationSlotsForBundleFuzzTest",
    "messageuser_fuzzer:MessageUserFuzzTest",
    "notification_fuzzer:NotificationFuzzTest",
    "notificationactionbutton_fuzzer:NotificationActionButtonFuzzTest",
    "notificationannex_fuzzer:NotificationAnnexFuzzTest",
    "notificationbasiccontent_fuzzer:NotificationBasicContentFuzzTest",
    "notificationbundleoption_fuzzer:NotificationBundleOptionFuzzTest",
    "notificationcontent_fuzzer:NotificationContentFuzzTest",
    "notificationconversationalcontent_fuzzer:NotificationConversationalContentFuzzTest",
    "notificationconversationalmessage_fuzzer:NotificationConversationalMessageFuzzTest",
    "notificationconversationalmessageannex_fuzzer:NotificationConversationalMessageAnnexFuzzTest",
    "notificationdistributedoptions_fuzzer:NotificationDistributedOptionsFuzzTest",
    "notificationdonotdisturbdate_fuzzer:NotificationDoNotDisturbDateFuzzTest",
    "notificationflags_fuzzer:NotificationFlagsFuzzTest",
    "notificationhelper_fuzzer:NotificationHelperFuzzTest",
    "notificationlongtextcontent_fuzzer:NotificationLongTextContentFuzzTest",
    "notificationlongtextcontentannex_fuzzer:NotificationLongTextContentAnnexFuzzTest",
    "notificationmediacontent_fuzzer:NotificationMediaContentFuzzTest",
    "notificationmultilinecontent_fuzzer:NotificationMultiLineContentFuzzTest",
    "notificationmultilinecontentannex_fuzzer:NotificationMultiLineContentAnnexFuzzTest",
    "notificationnormalcontent_fuzzer:NotificationNormalContentFuzzTest",
    "notificationparcel_fuzzer:NotificationParcelFuzzTest",
    "notificationpicturecontent_fuzzer:NotificationPictureContentFuzzTest",
    "notificationpicturecontentannex_fuzzer:NotificationPictureContentAnnexFuzzTest",
    "notificationrequest_fuzzer:NotificationRequestFuzzTest",
    "notificationrequestannex_fuzzer:NotificationRequestAnnexFuzzTest",
    "notificationslot_fuzzer:NotificationSlotFuzzTest",
    "notificationsorting_fuzzer:NotificationSortingFuzzTest",
    "notificationsortingannex_fuzzer:NotificationSortingAnnexFuzzTest",
    "notificationsortingmap_fuzzer:NotificationSortingMapFuzzTest",
    "notificationsortingmapannex_fuzzer:NotificationSortingMapAnnexFuzzTest",
    "notificationsubscribeInfo_fuzzer:NotificationSubscribeInfoFuzzTest",
    "notificationtemplate_fuzzer:NotificationTemplateFuzzTest",
    "notificationtemplateannex_fuzzer:NotificationTemplateAnnexFuzzTest",
    "notificationuserinput_fuzzer:NotificationUserInputFuzzTest",
    "notificationuserinputannex_fuzzer:NotificationUserInputAnnexFuzzTest",
    "publishcontinuoustasknotification_fuzzer:PublishContinuousTaskNotificationFuzzTest",
    "publishnotification_fuzzer:PublishNotificationFuzzTest",
    "readfromparcel_fuzzer:ReadFromParcelFuzzTest",
    "reminderdatamanager_fuzzer:ReminderDataManagerFuzzTest",
    "reminderdatasharehelper_fuzzer:ReminderDataShareHelperFuzzTest",
    "reminderhelper_fuzzer:ReminderHelperFuzzTest",
    "reminderrequest_fuzzer:ReminderRequestFuzzTest",
    "reminderrequestalarm_fuzzer:ReminderRequestAlarmFuzzTest",
    "reminderrequestannex_fuzzer:ReminderRequestAnnexFuzzTest",
    "reminderrequestannexthree_fuzzer:ReminderRequestAnnexThreeFuzzTest",
    "reminderrequestcalendar_fuzzer:ReminderRequestCalendarFuzzTest",
    "reminderrequestcontinuate_fuzzer:ReminderRequestContinuateFuzzTest",
    "reminderrequesttimer_fuzzer:ReminderRequestTimerFuzzTest",
    "reminderservice_fuzzer:ReminderServiceFuzzTest",
    "reminderstore_fuzzer:ReminderStoreFuzzTest",
    "reminderstoreannex_fuzzer:ReminderStoreAnnexFuzzTest",
    "removenotification_fuzzer:RemoveNotificationFuzzTest",
    "removenotificationsbybundle_fuzzer:RemoveNotificationsByBundleFuzzTest",
    "removenotificationslot_fuzzer:RemoveNotificationSlotFuzzTest",
    "setdonotdisturbdate_fuzzer:SetDoNotDisturbDateFuzzTest",
    "setnotificationbadgenum_fuzzer:SetNotificationBadgeNumFuzzTest",
    "setnotificationsenabledforallbundles_fuzzer:SetNotificationsEnabledForAllBundlesFuzzTest",
    "setprogressbar_fuzzer:SetProgressBarFuzzTest",
    "settemplate_fuzzer:SetTemplateFuzzTest",
  ]

  if (distributed_notification_service_feature_all_scenario_collaboration) {
    deps += [ "notificationextension_fuzzer:NotificationExtensionFuzzTest" ]
  }
}
