# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")

group("anm_target") {
  deps = [ ":anm" ]
}

config("tools_dump_config") {
  include_dirs = [ "${tools_path}/dump/include" ]
}

ohos_executable("anm") {
  public_configs = [ ":tools_dump_config" ]

  sources = [
    "src/main.cpp",
    "src/notification_shell_command.cpp",
    "src/shell_command.cpp",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [ "${core_path}:ans_core" ]

  configs = [
    "${core_path}:public_ans_core_config",
    "${ability_runtime_inner_api_path}/wantagent:wantagent_innerkits_public_config",
  ]

  defines = []
  if (distributed_notification_supported) {
    defines += [ "DISTRIBUTED_NOTIFICATION_SUPPORTED" ]
  }

  external_deps = [
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_image_framework:image_native",
    "relational_store:native_rdb",
  ]
  external_deps += component_external_deps

  install_enable = true
  part_name = "${component_name}"
  subsystem_name = "${subsystem_name}"
}
